force-app/main/default/objects/Contact/fields/Account_ID_formula__c.field-meta.xml
<CustomField>
    <fullName>Account_ID_formula__c</fullName>
    <formula>AccountId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account ID formula</label>
    <type>Text</type>
</CustomField>