force-app/main/default/objects/Contact/fields/Alt_ID__c.field-meta.xml
<CustomField>
    <fullName>Alt_ID__c</fullName>
    <description>Used for Slate</description>
    <externalId>true</externalId>
    <label>Alt ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>