force-app/main/default/objects/Contact/fields/Annual_Giving__c.field-meta.xml
<CustomField>
    <fullName>Annual_Giving__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Opt-in/Opt-out control for texts from Signal Vine on this Program.</description>
    <inlineHelpText>Opt-in/Opt-out control for texts from Signal Vine on this Program.</inlineHelpText>
    <label>Annual Giving</label>
    <type>Checkbox</type>
</CustomField>