force-app/main/default/objects/Contact/fields/Biographic_Profile_GDrive__c.field-meta.xml
<CustomField>
    <fullName>Biographic_Profile_GDrive__c</fullName>
    <formula>&quot;&amp;solmgr=1&quot; + 
&quot;&amp;id=&quot; + Id +
&quot;&amp;queryid=[TopGiving]0Q_030EAQ645188,[ContactPhotoId]0Q_031EAQ705221?pv0=&quot; + ucinn_ascendv2__Picture_Record_ID__c +
&quot;&amp;templateid=0T_010EAQ281851&quot; + 
&quot;&amp;defaultpdf=1&quot; + 
&quot;&amp;uf0=1&quot; + 
&quot;&amp;mfts0=Biographic_Profile_Last_Generated_Date__c&quot; + 
&quot;&amp;mftsvalue0=NOW&quot; + 
&quot;&amp;qmode=GoogleDrive&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Biographic Profile GDrive</label>
    <type>Text</type>
</CustomField>