force-app/main/default/objects/Contact/fields/Biographic_Profile_Last_Generated_Date__c.field-meta.xml
<CustomField>
    <fullName>Biographic_Profile_Last_Generated_Date__c</fullName>
    <description>Date/Time of when the most recent biographic profile was created for the constituent</description>
    <label>Biographic Profile Last Generated Date</label>
    <type>DateTime</type>
</CustomField>