force-app/main/default/objects/Contact/fields/Business_Address_Verified_Date__c.field-meta.xml
<CustomField>
    <fullName>Business_Address_Verified_Date__c</fullName>
    <label>Business Address Verified Date</label>
    <type>Date</type>
</CustomField>