force-app/main/default/objects/Contact/fields/Business_Phone_Verified_Date__c.field-meta.xml
<CustomField>
    <fullName>Business_Phone_Verified_Date__c</fullName>
    <label>Business Phone Verified Date</label>
    <type>Date</type>
</CustomField>