force-app/main/default/objects/Contact/fields/Citizenship_2__c.field-meta.xml
<CustomField>
    <fullName>Citizenship_2__c</fullName>
    <label>Citizenship 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Citizenship</valueSetName>
    </valueSet>
</CustomField>