force-app/main/default/objects/Contact/fields/Citizenship__c.field-meta.xml
<CustomField>
    <fullName>Citizenship__c</fullName>
    <label>Citizenship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Citizenship</valueSetName>
    </valueSet>
</CustomField>