force-app/main/default/objects/Contact/fields/Constituent_Profile__c.field-meta.xml
<CustomField>
    <fullName>Constituent_Profile__c</fullName>
    <formula>&quot;&amp;solmgr=1&quot; + 
&quot;&amp;id=&quot; + Id +
&quot;&amp;queryid=[email]0Q_004EAQ293751,[employer]0Q_024EAQ293752,[involv]0Q_005EAQ293751,[Relations]0Q_003EAQ293750,[Deg]0Q_023EAQ293752&quot; + 
&quot;&amp;templateid=0T_006EAQ508008&quot; + 
&quot;&amp;ds8=1&quot; + 
&quot;&amp;defaultpdf=1&quot; + 
&quot;&amp;templategroup=ContactProfile&quot; + 
&quot;&amp;ofn=Constituent Profile - &quot; +  ucinn_ascendv2__Full_Name_Formula__c  + 
&quot;&amp;qmode=SalesforceFile&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Constituent Profile</label>
    <type>Text</type>
</CustomField>