force-app/main/default/objects/Contact/fields/Constituent_Status__c.field-meta.xml
<CustomField>
    <fullName>Constituent_Status__c</fullName>
    <label>Constituent Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>D</fullName>
                <label>Deceased</label>
            </value>
            <value>
                <fullName>F</fullName>
                <label>Defunct</label>
            </value>
            <value>
                <fullName>L</fullName>
                <label>Lost</label>
            </value>
            <value>
                <fullName>X</fullName>
                <label>Purged</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>