force-app/main/default/objects/Contact/fields/Constituent_Status_Verified_Date__c.field-meta.xml
<CustomField>
    <fullName>Constituent_Status_Verified_Date__c</fullName>
    <label>Constituent Status Verified Date</label>
    <type>Date</type>
</CustomField>