force-app/main/default/objects/Contact/fields/crmND_ID__c.field-meta.xml
<CustomField>
    <fullName>crmND_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Constituent ID from Enterprise CRM - crmND</description>
    <externalId>true</externalId>
    <inlineHelpText>Constituent ID from Enterprise CRM - crmND</inlineHelpText>
    <label>crmND ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>