force-app/main/default/objects/Contact/fields/Current_Employer__c.field-meta.xml
<CustomField>
    <fullName>Current_Employer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Filled by Affiliation record with current employer</inlineHelpText>
    <label>Current Employer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Constituents</relationshipLabel>
    <relationshipName>Constituents</relationshipName>
    <type>Lookup</type>
</CustomField>