force-app/main/default/objects/Contact/fields/Data_Source_POC__c.field-meta.xml
<CustomField>
    <fullName>Data_Source_POC__c</fullName>
    <label>Data Source POC</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Academic Advancement</fullName>
            </value>
            <value>
                <fullName>Advance</fullName>
            </value>
            <value>
                <fullName>Annual Giving Programs</fullName>
            </value>
            <value>
                <fullName>Freshman Parent</fullName>
            </value>
            <value>
                <fullName>Student</fullName>
            </value>
            <value>
                <fullName>Harris Directory</fullName>
            </value>
            <value>
                <fullName>Virtual Run</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>