force-app/main/default/objects/Contact/fields/Data_Source_Year__c.field-meta.xml
<CustomField>
    <fullName>Data_Source_Year__c</fullName>
    <defaultValue>YEAR(TODAY())</defaultValue>
    <label>Data Source Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>