force-app/main/default/objects/Contact/fields/Employment_Verified_Date__c.field-meta.xml
<CustomField>
    <fullName>Employment_Verified_Date__c</fullName>
    <label>Employment Verified Date</label>
    <type>Date</type>
</CustomField>