force-app/main/default/objects/Contact/fields/Fundraiser_Email__c.field-meta.xml
<CustomField>
    <fullName>Fundraiser_Email__c</fullName>
    <description>Field to capture the Active Fundraiser Email Type</description>
    <inlineHelpText>Field to capture the Active Fundraiser Email Type</inlineHelpText>
    <label>Fundraiser Email</label>
    <type>Email</type>
</CustomField>