force-app/main/default/objects/Contact/fields/Home_Mailing_Address_Verified_Date__c.field-meta.xml
<CustomField>
    <fullName>Home_Mailing_Address_Verified_Date__c</fullName>
    <label>Home Address Verified Date</label>
    <type>Date</type>
</CustomField>