force-app/main/default/objects/Contact/fields/Home_Phone_Verified_Date__c.field-meta.xml
<CustomField>
    <fullName>Home_Phone_Verified_Date__c</fullName>
    <label>Home Phone Verified Date</label>
    <type>Date</type>
</CustomField>