force-app/main/default/objects/Contact/fields/Institutional_Suffix__c.field-meta.xml
<CustomField>
    <fullName>Institutional_Suffix__c</fullName>
    <label>Institutional Suffix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>