force-app/main/default/objects/Contact/fields/iWave_PROscores__DMS_ID__c.field-meta.xml
<CustomField>
    <fullName>iWave_PROscores__DMS_ID__c</fullName>
    <description>This is the ID that maps to the iWave services.</description>
    <externalId>true</externalId>
    <label>DMS ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>