force-app/main/default/objects/Contact/fields/iWave_PROscores__iWave_Donation_Total__c.field-meta.xml
<CustomField>
    <fullName>iWave_PROscores__iWave_Donation_Total__c</fullName>
    <label>iWave Donations Total Value</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>