force-app/main/default/objects/Contact/fields/iWave_PROscores__Mailing_Street_Address_2__c.field-meta.xml
<CustomField>
    <fullName>iWave_PROscores__Mailing_Street_Address_2__c</fullName>
    <formula>IF(CONTAINS( MailingStreet, SUBSTITUTE($Label.iwave_proscores__newline,&quot;-&quot;, &quot;&quot;) ),
RIGHT(MailingStreet,
            LEN(MailingStreet) - 
                FIND( SUBSTITUTE($Label.iwave_proscores__newline,&quot;-&quot;, &quot;&quot;) , 
                         MailingStreet)
    ),&quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mailing Street Address 2</label>
    <type>Text</type>
</CustomField>