force-app/main/default/objects/Contact/fields/iWave_PROscores__Mailing_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>iWave_PROscores__Mailing_Street_Address__c</fullName>
    <formula>IF( CONTAINS( MailingStreet, SUBSTITUTE($Label.iwave_proscores__newline,&quot;-&quot;, &quot;&quot;) ),
LEFT( MailingStreet,    
           FIND( SUBSTITUTE($Label.iwave_proscores__newline,&quot;-&quot;, &quot;&quot;), 
                MailingStreet)   
                /* If you use MID, add -2 to remove the 2 ghost characters that you need to trim off */
   ),
   MailingStreet
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mailing Street Address</label>
    <type>Text</type>
</CustomField>