force-app/main/default/objects/Contact/fields/iWave_PROscores__MiddleName__c.field-meta.xml
<CustomField>
    <fullName>iWave_PROscores__MiddleName__c</fullName>
    <label>MiddleName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>