force-app/main/default/objects/Contact/fields/Marriage_Status_Verified_Date__c.field-meta.xml
<CustomField>
    <fullName>Marriage_Status_Verified_Date__c</fullName>
    <label>Marriage Status Verified Date</label>
    <type>Date</type>
</CustomField>