force-app/main/default/objects/Contact/fields/Matching_Comp_Key_StreetAddressZip__c.field-meta.xml
<CustomField>
    <fullName>Matching_Comp_Key_StreetAddressZip__c</fullName>
    <description>Matching composite key based on street address + zip prefixed with ACI</description>
    <formula>TRIM(
IF(!ISBLANK(ucinn_ascendv2__Preferred_Address_Line_1__c) &amp;&amp; ISBLANK(ucinn_ascendv2__Preferred_Address_Line_2__c) &amp;&amp; !ISBLANK(ucinn_ascendv2__Preferred_Address_Postal_Code__c),
ucinn_ascendv2__Preferred_Address_Line_1__c &amp; ucinn_ascendv2__Preferred_Address_Postal_Code__c,IF(!ISBLANK(ucinn_ascendv2__Preferred_Address_Line_1__c) &amp;&amp; !ISBLANK(ucinn_ascendv2__Preferred_Address_Line_2__c) &amp;&amp; !ISBLANK(ucinn_ascendv2__Preferred_Address_Postal_Code__c),
ucinn_ascendv2__Preferred_Address_Line_1__c &amp; ucinn_ascendv2__Preferred_Address_Line_2__c &amp; ucinn_ascendv2__Preferred_Address_Postal_Code__c,null
)
))</formula>
    <inlineHelpText>Matching composite key based on street address + zip</inlineHelpText>
    <label>Matching Comp Key StreetAddressZip</label>
    <type>Text</type>
</CustomField>