force-app/main/default/objects/Contact/fields/Matching_Gift_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Matching_Gift_Ratio__c</fullName>
    <formula>IF(Current_Employer__r.ucinn_ascendv2__Matching_Ratio__c &gt; 0, TEXT(Current_Employer__r.ucinn_ascendv2__Matching_Ratio__c), &quot;None&quot;)</formula>
    <label>Matching Gift Ratio</label>
    <type>Text</type>
</CustomField>