force-app/main/default/objects/Contact/fields/Matching_Key_Value_2__c.field-meta.xml
<CustomField>
    <fullName>Matching_Key_Value_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Matching Key Value 2</label>
    <referenceTo>ucinn_ascendv2__Matching_Key_Value__c</referenceTo>
    <relationshipLabel>Constituents (Matching Key Value 2)</relationshipLabel>
    <relationshipName>Constituents1</relationshipName>
    <type>Lookup</type>
</CustomField>