force-app/main/default/objects/Contact/fields/Mobile_Verified_Date__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Verified_Date__c</fullName>
    <label>Mobile Verified Date</label>
    <type>Date</type>
</CustomField>