force-app/main/default/objects/Contact/fields/nd_Active_Prospect__c.field-meta.xml
<CustomField>
    <fullName>nd_Active_Prospect__c</fullName>
    <formula>IF(Account.nd_RecTypeDeveloperName_F__c== &apos;Household&apos; &amp;&amp; TEXT(Account.ND_Household_Category__c) !=null &amp;&amp; (TEXT(Account.ND_Household_Category__c) ==&apos;AS&apos;||
TEXT(Account.ND_Household_Category__c) ==&apos;R2&apos; ||
TEXT(Account.ND_Household_Category__c) ==&apos;LE&apos;),true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active Prospect</label>
    <type>Checkbox</type>
</CustomField>