force-app/main/default/objects/Contact/fields/ND_Activities_Affiliations__c.field-meta.xml
<CustomField>
    <fullName>ND_Activities_Affiliations__c</fullName>
    <description>Used for Advisory Council Directory</description>
    <label>Activities/Affiliations</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>