force-app/main/default/objects/Contact/fields/ND_Admit_Year__c.field-meta.xml
<CustomField>
    <fullName>ND_Admit_Year__c</fullName>
    <description>Admit Year for ND Students</description>
    <inlineHelpText>Admit Year for ND Students</inlineHelpText>
    <label>Admit Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>