force-app/main/default/objects/Contact/fields/nd_Alternative_Delivery_Deceased_Delay__c.field-meta.xml
<CustomField>
    <fullName>nd_Alternative_Delivery_Deceased_Delay__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Alternative Delivery - Deceased Delay</label>
    <type>Checkbox</type>
</CustomField>