force-app/main/default/objects/Contact/fields/nd_Alternative_Delivery_Electronic_Other__c.field-meta.xml
<CustomField>
    <fullName>nd_Alternative_Delivery_Electronic_Other__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Alternative Delivery - Electronic Other</label>
    <type>Checkbox</type>
</CustomField>