force-app/main/default/objects/Contact/fields/nd_Alternative_Delivery_Hand__c.field-meta.xml
<CustomField>
    <fullName>nd_Alternative_Delivery_Hand__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Alternative Delivery - Hand</label>
    <type>Checkbox</type>
</CustomField>