force-app/main/default/objects/Contact/fields/nd_Alternative_Delivery_Mail_Only__c.field-meta.xml
<CustomField>
    <fullName>nd_Alternative_Delivery_Mail_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Alternative Delivery - Mail Only</label>
    <type>Checkbox</type>
</CustomField>