force-app/main/default/objects/Contact/fields/nd_Alternative_Delivery_One_Time_Mail__c.field-meta.xml
<CustomField>
    <fullName>nd_Alternative_Delivery_One_Time_Mail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Alternative Delivery - One-Time Mail</label>
    <type>Checkbox</type>
</CustomField>