force-app/main/default/objects/Contact/fields/nd_Anniversary_Date__c.field-meta.xml
<CustomField>
    <fullName>nd_Anniversary_Date__c</fullName>
    <description>Anniversary Date of Constituent&apos;s Marriage/Partnership. Exposed on Stewardship Plan (Strategy Object record type)</description>
    <label>Anniversary Date</label>
    <type>Date</type>
</CustomField>