force-app/main/default/objects/Contact/fields/ND_Anonymous_Donor__c.field-meta.xml
<CustomField>
    <fullName>ND_Anonymous_Donor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This lookup field will be used to connect an Anonymous Donor record to a Constituent record.</description>
    <label>Anonymous Donor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Constituents (Anonymous Donor)</relationshipLabel>
    <relationshipName>Constituents</relationshipName>
    <type>Lookup</type>
</CustomField>