force-app/main/default/objects/Contact/fields/ND_Awards_Honors__c.field-meta.xml
<CustomField>
    <fullName>ND_Awards_Honors__c</fullName>
    <description>Used for Advisory Council Directory</description>
    <label>Awards &amp; Honors</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>