force-app/main/default/objects/Contact/fields/ND_Banner_ID__c.field-meta.xml
<CustomField>
    <fullName>ND_Banner_ID__c</fullName>
    <label>Banner ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>