force-app/main/default/objects/Contact/fields/nd_CC_PC_Giving__c.field-meta.xml
<CustomField>
    <fullName>nd_CC_PC_Giving__c</fullName>
    <description>Used for Membership Credit Logic (assigning Constituents to Giving Societies). Populated by Ruli/Batch Job.</description>
    <label>CC/PC Giving</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>