force-app/main/default/objects/Contact/fields/nd_Constituent_CaseSafe_ID__c.field-meta.xml
<CustomField>
    <fullName>nd_Constituent_CaseSafe_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <label>Constituent CaseSafe ID</label>
    <type>Text</type>
</CustomField>