force-app/main/default/objects/Contact/fields/nd_Constituent_ID_and_Inst_Suffix__c.field-meta.xml
<CustomField>
    <fullName>nd_Constituent_ID_and_Inst_Suffix__c</fullName>
    <formula>ucinn_ascendv2__Donor_ID__c &amp;&quot; - &quot; &amp; nd_Institutional_Suffix__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Constituent ID and Inst Suffix</label>
    <type>Text</type>
</CustomField>