force-app/main/default/objects/Contact/fields/ND_created_from_interim__c.field-meta.xml
<CustomField>
    <fullName>ND_created_from_interim__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ND created from interim</label>
    <type>Checkbox</type>
</CustomField>