force-app/main/default/objects/Contact/fields/ND_Days_from_Birthdate__c.field-meta.xml
<CustomField>
    <fullName>ND_Days_from_Birthdate__c</fullName>
    <description>Days from the constituent&apos;s birthdate.  Created for action center notification.</description>
    <formula>IF(!ISBLANK( Birthdate ),(MONTH(Birthdate) - MONTH(Today()))*(DAY(DATE(YEAR(TODAY()),MONTH(TODAY())+1,1)-1)) + (DAY(Birthdate) - DAY(Today())),null)</formula>
    <inlineHelpText>Days from the constituent&apos;s birthdate.</inlineHelpText>
    <label>Days from Birthdate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>