force-app/main/default/objects/Contact/fields/ND_Days_from_Deceased_Date__c.field-meta.xml
<CustomField>
    <fullName>ND_Days_from_Deceased_Date__c</fullName>
    <description>Created for action center notification.</description>
    <formula>IF(!ISBLANK( ucinn_ascendv2__Deceased_Date__c ),(MONTH(ucinn_ascendv2__Deceased_Date__c) - MONTH(Today()))*(DAY(DATE(YEAR(TODAY()),MONTH(TODAY())+1,1)-1)) + (DAY(ucinn_ascendv2__Deceased_Date__c) - DAY(Today())),null)</formula>
    <inlineHelpText>Days from the deceased date.</inlineHelpText>
    <label>Days from Deceased Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>