force-app/main/default/objects/Contact/fields/ND_Decease_Confirmed_Date__c.field-meta.xml
<CustomField>
    <fullName>ND_Decease_Confirmed_Date__c</fullName>
    <inlineHelpText>Date that the Data Integrity Team confirmed the Deceased Individual.</inlineHelpText>
    <label>Decease Confirmed Date</label>
    <type>Date</type>
</CustomField>