force-app/main/default/objects/Contact/fields/ND_Decease_Notified_Date__c.field-meta.xml
<CustomField>
    <fullName>ND_Decease_Notified_Date__c</fullName>
    <inlineHelpText>The Date that ND was notified that the constituent was deceased.</inlineHelpText>
    <label>Decease Notified Date</label>
    <type>Date</type>
</CustomField>