force-app/main/default/objects/Contact/fields/ND_Decease_Status__c.field-meta.xml
<CustomField>
    <fullName>ND_Decease_Status__c</fullName>
    <label>Decease Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Decease Notified</fullName>
            </value>
            <value>
                <fullName>Pending Obituary</fullName>
            </value>
            <value>
                <fullName>Decease Confirmed</fullName>
            </value>
            <value>
                <fullName>Decease Unconfirmed Final</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>