force-app/main/default/objects/Contact/fields/nd_Financial_Aid_Giving__c.field-meta.xml
<CustomField>
    <fullName>nd_Financial_Aid_Giving__c</fullName>
    <description>Calculated by Ruli. Used to generate Commencement Stole Case</description>
    <label>Financial Aid Giving</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>