force-app/main/default/objects/Contact/fields/nd_Household_Lifetime_Cash__c.field-meta.xml
<CustomField>
    <fullName>nd_Household_Lifetime_Cash__c</fullName>
    <formula>Account.ucinn_ascendv2__Lifetime_Cash__c</formula>
    <label>Household Lifetime Cash</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>