force-app/main/default/objects/Contact/fields/nd_Household_PRM__c.field-meta.xml
<CustomField>
    <fullName>nd_Household_PRM__c</fullName>
    <formula>Account.ucinn_ascendv2__PRM__r.FirstName + &quot; &quot; +  Account.ucinn_ascendv2__PRM__r.LastName</formula>
    <label>Household PRM</label>
    <type>Text</type>
</CustomField>