force-app/main/default/objects/Contact/fields/nd_Household_Stewardship_Classification__c.field-meta.xml
<CustomField>
    <fullName>nd_Household_Stewardship_Classification__c</fullName>
    <formula>TEXT( Account.nd_Stewardship_Classification__c )</formula>
    <label>Household Stewardship Classification</label>
    <type>Text</type>
</CustomField>