force-app/main/default/objects/Contact/fields/nd_Institutional_Suffix__c.field-meta.xml
<CustomField>
    <fullName>nd_Institutional_Suffix__c</fullName>
    <formula>If(ISBLANK(nd_Suffix_Constituent_Types__c),&quot;&quot;, nd_Suffix_Constituent_Types__c) &amp; IF((ISBLANK(nd_Suffix_ND_Affiliations__c) &amp;&amp; ISBLANK(nd_Suffix_Giving_Societies__c)&amp;&amp; nd_Active_Prospect__c =FALSE) ,&quot;&quot;,&quot;/&quot;) &amp; If(ISBLANK(nd_Suffix_ND_Affiliations__c), &quot;&quot;, nd_Suffix_ND_Affiliations__c &amp; &quot; &quot;) &amp; IF(ISBLANK(nd_Suffix_Giving_Societies__c),&quot;&quot;,nd_Suffix_Giving_Societies__c) &amp; IF(nd_Active_Prospect__c, &quot; AP&quot;,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Institutional Suffix</label>
    <type>Text</type>
</CustomField>