force-app/main/default/objects/Contact/fields/nd_Is_Household_Primary__c.field-meta.xml
<CustomField>
    <fullName>nd_Is_Household_Primary__c</fullName>
    <formula>Account.ucinn_ascendv2__Primary_Contact__r.Id = Id</formula>
    <label>Is Household Primary</label>
    <type>Checkbox</type>
</CustomField>