force-app/main/default/objects/Contact/fields/nd_John_Cardinal_O_Hara_Honorary_Credit__c.field-meta.xml
<CustomField>
    <fullName>nd_John_Cardinal_O_Hara_Honorary_Credit__c</fullName>
    <formula>ucinn_ascendv2__Preferred_Spouse__r.nd_John_Cardinal_O_Hara_Society_Giving__c +
nd_Partner_Significant_Other__r.nd_John_Cardinal_O_Hara_Society_Giving__c</formula>
    <label>John Cardinal O&apos;Hara Honorary Credit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>