force-app/main/default/objects/Contact/fields/nd_John_Cardinal_O_Hara_Society_Giving__c.field-meta.xml
<CustomField>
    <fullName>nd_John_Cardinal_O_Hara_Society_Giving__c</fullName>
    <description>Used for Membership Credit Logic (assigning Constituents to Giving Societies). Populated by Ruli/Batch Job.</description>
    <label>John Cardinal O&apos;Hara Society Giving</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>