force-app/main/default/objects/Contact/fields/nd_Junior_Parent_JPW__c.field-meta.xml
<CustomField>
    <fullName>nd_Junior_Parent_JPW__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Junior Parent (JPW)</label>
    <type>Checkbox</type>
</CustomField>