force-app/main/default/objects/Contact/fields/nd_Last_Received_Report_Date__c.field-meta.xml
<CustomField>
    <fullName>nd_Last_Received_Report_Date__c</fullName>
    <description>Date the last Endowment Report Date was sent. Exposed on Designation Stewardship record.</description>
    <label>Last Received Report Date</label>
    <type>Date</type>
</CustomField>