force-app/main/default/objects/Contact/fields/ND_Last_Wealth_Rating_Date__c.field-meta.xml
<CustomField>
    <fullName>ND_Last_Wealth_Rating_Date__c</fullName>
    <formula>Account.ND_Last_Wealth_Rating_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Wealth Rating Date</label>
    <type>Date</type>
</CustomField>