force-app/main/default/objects/Contact/fields/ND_Liquidity__c.field-meta.xml
<CustomField>
    <fullName>ND_Liquidity__c</fullName>
    <formula>TEXT(Account.ND_Liquidity__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Liquidity</label>
    <type>Text</type>
</CustomField>