force-app/main/default/objects/Contact/fields/ND_Listens__c.field-meta.xml
<CustomField>
    <fullName>ND_Listens__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Opt-in/Opt-out control for texts from Signal Vine on this Program.</description>
    <inlineHelpText>Opt-in/Opt-out control for texts from Signal Vine on this Program.</inlineHelpText>
    <label>ND Listens</label>
    <type>Checkbox</type>
</CustomField>