force-app/main/default/objects/Contact/fields/nd_Lottery_Alternate_Recipient__c.field-meta.xml
<CustomField>
    <fullName>nd_Lottery_Alternate_Recipient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lottery Alternate Recipient</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Constituents (Lottery Alternate Recipient)</relationshipLabel>
    <relationshipName>Constituents2</relationshipName>
    <type>Lookup</type>
</CustomField>